--- a/src/components/Trilhas/style/style.css
+++ b/src/components/Trilhas/style/style.css
@@ -18,6 +18,11 @@
 }
 .trilhas img {
   width: 3vh;
+  transition: all 0.5s ease;
+}
+.trilhas img:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease;
 }
 .trilhas img:active {
   -webkit-animation: bounce 0.1s ease-in;
