--- a/src/components/Trilhas/style/style.scss
+++ b/src/components/Trilhas/style/style.scss
@@ -20,6 +20,12 @@
 
   & img {
     width: 3vh;
+    transition: all 0.5s ease;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: all 0.5s ease;
+    }
 
     &:active {
       animation: bounce 0.1s ease-in;
