--- a/src/pages/Main/style/style.scss
+++ b/src/pages/Main/style/style.scss
@@ -36,12 +36,13 @@ $theme-color-3: #9026d0;
     cursor: pointer;
     display: block;
     background-color: $theme-color-1;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    // padding: 19px 120px;
-    padding: 1.9vh 8.5vw;
-    border-radius: 50px;
-    font-size: 1.75rem;
+    margin-top: 3vh;
+    margin-bottom: 1.5vh;
+    text-align: center;
+    width: 40vh;
+    height: 7vh;
+    border-radius: 5px;
+    font-size: 3vh;
     transition: 1s ease;
 
     &:hover {
@@ -54,7 +55,7 @@ $theme-color-3: #9026d0;
   }
 
   & p {
-    font-size: 1.25rem;
+    font-size: 2vh;
     cursor: pointer;
 
     &:hover {
