--- a/src/pages/Modal/style/style.css
+++ b/src/pages/Modal/style/style.css
@@ -72,6 +72,16 @@
   font-size: 2.1vh;
   transition: 1s ease;
 }
+.modal-container form button a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: #fff;
+}
 .modal-container form button:hover {
   -webkit-animation: change-color 2.5s ease infinite alternate;
           animation: change-color 2.5s ease infinite alternate;
