--- a/src/pages/Modal/style/style.scss
+++ b/src/pages/Modal/style/style.scss
@@ -75,6 +75,14 @@ $theme-color-3: #9026d0;
       font-size: 2.1vh;
       transition: 1s ease;
 
+      & a {
+        @include display_flex(row, center, center);
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+        color: #fff;
+      }
+
       &:hover {
         animation: change-color 2.5s ease infinite alternate;
       }
