--- a/src/pages/Modal/style/style.scss
+++ b/src/pages/Modal/style/style.scss
@@ -32,7 +32,7 @@ $theme-color-3: #9026d0;
   position: relative;
   border-radius: 24px;
 
-  & .close-btn {
+  .close-btn {
     all: unset;
     cursor: pointer;
     color: #000;
@@ -42,27 +42,27 @@ $theme-color-3: #9026d0;
     right: 20px;
   }
 
-  & img {
+  img {
     width: 25vh;
   }
 
-  & form {
+  form {
     @include display_flex(column, center, center);
     gap: 2vh;
     width: 100%;
 
-    & .info {
+    .info {
       @include display_flex(column, center, stretch);
       width: 100%;
 
-      & input {
+      input {
         font-size: 1.8vh;
         padding: 2.1vh;
         height: 4vh;
       }
     }
 
-    & button {
+    button {
       all: unset;
       cursor: pointer;
       display: block;
@@ -75,7 +75,7 @@ $theme-color-3: #9026d0;
       font-size: 2.1vh;
       transition: 1s ease;
 
-      & a {
+      a {
         @include display_flex(row, center, center);
         width: 100%;
         height: 100%;
@@ -98,7 +98,7 @@ $theme-color-3: #9026d0;
   color: #000;
   font-size: 2.1vh;
 
-  & strong {
+  strong {
     color: $theme-color-2;
     cursor: pointer;
     &:hover {
