--- a/src/components/Card/style/style.scss
+++ b/src/components/Card/style/style.scss
@@ -6,9 +6,14 @@
 }
 
 .trilha {
-  @include display_flex(column, center, center);
-  gap: 10px;
-  & img {
+  @include display_flex(column, flex-start, center);
+  gap: 1vh;
+  padding: 1.3vh;
+  width: 25vh;
+  height: 25vh;
+  text-align: center;
+
+  img {
     width: 15vh;
   }
 }
