--- a/src/components/Trilhas/style/style.scss
+++ b/src/components/Trilhas/style/style.scss
@@ -13,12 +13,12 @@
   bottom: 10vh;
   gap: 3vw;
 
-  & .card-collection {
+  .card-collection {
     @include display_flex(row, center, center);
     gap: 10vw;
   }
 
-  & img {
+  img {
     width: 3vh;
     transition: all 0.5s ease;
 
