--- a/src/pages/Main/style/style.css
+++ b/src/pages/Main/style/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-.container {
+.main-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,6 +11,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: #000;
+  color: #fff;
 }
 
 .call-to-action {
