--- a/src/components/Header/style/style.scss
+++ b/src/components/Header/style/style.scss
@@ -22,11 +22,15 @@ h1 {
 
 .right-side {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  gap: 0.1vh;
-
-  p {
-    font-size: 2vh;
+  gap: 2vh;
+  img {
+    width: 5vh;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.1);
+    }
+    &:active {
+      animation: bounce 0.1s ease-in;
+    }
   }
 }
