--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,25 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
+.hidden {
+  display: none;
+}
+
+@keyframes bounce {
+  to {
+    transform: translateY(4px);
+  }
+}
+
+@keyframes change-color {
+  0% {
+    background-color: #ee41a8;
+  }
+  50% {
+    background-color: #0dbc9e;
+  }
+  100% {
+    background-color: #9026d0;
+  }
+}
