--- a/src/components/ListaCurso/style/style.css
+++ b/src/components/ListaCurso/style/style.css
@@ -1,5 +1,46 @@
 .lista-curso {
+  display: flex;
   background-color: #fff;
   width: 100vw;
-  height: 90vh;
+  height: 100vh;
+}
+.lista-curso .wrap-description {
+  margin-top: 15vh;
+  width: 50vw;
+  z-index: 2;
+  gap: 7vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+}
+.lista-curso .wrap-description .trilha {
+  justify-content: center;
+  font-size: 2vh;
+  border-radius: 20px;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top left, #0dbc9e, #ee41a8, #9026d0);
+  background-clip: content-box, border-box;
+}
+.lista-curso .wrap-description .trilha img {
+  filter: brightness(0.4);
+}
+.lista-curso .wrap-description .description {
+  text-align: center;
+  padding: 5vh;
+}
+.lista-curso .wrapper {
+  padding: 5vh;
+  width: 45vw;
+  margin-top: 25vh;
+  overflow: auto;
+}
+
+.close {
+  cursor: pointer;
+  z-index: 2;
+  position: absolute;
+  top: 15vh;
+  right: 15vh;
 }/*# sourceMappingURL=style.css.map */
