--- a/src/pages/Home/style/style.scss
+++ b/src/pages/Home/style/style.scss
@@ -9,6 +9,10 @@ $theme-color-3: #9026d0;
   align-items: $align_items;
 }
 
+header {
+  z-index: 2;
+}
+
 .page-home {
   @include display_flex(column, center, center);
   background-image: url("../../../assets/background-light.png");
@@ -25,6 +29,7 @@ $theme-color-3: #9026d0;
 
   .trilhas {
     position: static;
+    cursor: pointer;
 
     .seta {
       filter: brightness(0);
@@ -74,5 +79,6 @@ $theme-color-3: #9026d0;
 }
 
 .lista-curso {
-  position: absolute;
+  z-index: 1;
+  position: fixed;
 }
