--- a/src/components/Accordion/style/style.scss
+++ b/src/components/Accordion/style/style.scss
@@ -51,4 +51,9 @@
 
 .accordion-content {
   padding: 1em 1.5em;
+  li {
+    font-size: 2.3vh;
+    line-height: 3vh;
+    list-style-type: decimal;
+  }
 }
