--- a/src/components/Header/style/style.scss
+++ b/src/components/Header/style/style.scss
@@ -1,12 +1,21 @@
+.header-pages {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
+
 header {
   display: flex;
+  background-color: #fff;
   justify-content: space-between;
   box-shadow: 0 3px 10px #d9d9d9;
   padding: 2vh;
   width: 100%;
   height: 10vh;
-  position: fixed;
+  position: sticky;
   top: 0;
+  z-index: 3;
 }
 
 h1 {
