--- a/src/components/Conteudo/style/style.css
+++ b/src/components/Conteudo/style/style.css
@@ -8,3 +8,9 @@ div.conteudo{
     height: 80vh;
     font-size: 1.5rem;
 }
+div.conteudo-url{
+    margin-top: 40px;
+}
+div.conteudo > nav > ul{
+    margin-top: -12px;
+}
