--- a/src/components/ListaAulas/style/style.css
+++ b/src/components/ListaAulas/style/style.css
@@ -5,8 +5,20 @@ div.aulas{
     border: 5px solid gray;
     border-radius: 20px;
     width: 25vw;
-    margin-top: 8vh;
-    height: 50vh;
+    margin-top: 120px;
+    height: 60vh;
+    overflow-y: scroll;
+}
+div.aulas::-webkit-scrollbar-track{
+    border-radius: 0 20px 20px 0;
+    background-color: white;
+}
+div.aulas::-webkit-scrollbar{
+    width: 16px;
+}
+div.aulas::-webkit-scrollbar-thumb{
+    border-radius: 20px;
+    background-color: gray;
 }
 div.aulas > nav > ul > li > a{
     font-size: 1.5rem;
