--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -11,7 +11,7 @@ $theme-color-3: #9026d0;
 
 .page-home {
   @include display_flex(column, center, center);
-  background-image: url("../../../assets/background-light.png");
+  background-image: url("../../assets/background-light.png");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
