--- a/src/components/Header/style/style.scss
+++ b/src/components/Header/style/style.scss
@@ -26,11 +26,13 @@ h1 {
 
 .left-side {
   display: flex;
+  flex-grow: 2;
   gap: 2vh;
 }
 
 .right-side {
   display: flex;
+  text-align: end;
   gap: 2vh;
   img {
     width: 5vh;
