--- a/src/pages/Login/style.scss
+++ b/src/pages/Login/style.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-
 $theme-color-1: #0dbc9e;
 $theme-color-2: #ee41a8;
 $theme-color-3: #9026d0;
@@ -15,7 +13,7 @@ $theme-color-3: #9026d0;
   @include display_flex(column, center, center);
   height: 100%;
   width: 100%;
-  background-image: url("../../../assets/background-dark.png");
+  background-image: url("../../assets/background-dark.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
