--- a/src/pages/Modal/style.scss
+++ b/src/pages/Modal/style.scss
@@ -17,6 +17,17 @@ $theme-color-3: #9026d0;
   right: 0;
   bottom: 0;
   left: 0;
+
+  h1 {
+    display: flex;
+    padding: 2vh;
+    border-radius: 10px;
+    background-color: rgb(118, 221, 118);
+    color: green;
+    position: absolute;
+    bottom: -10vh;
+    left: 35%;
+  }
 }
 
 .modal-container {
@@ -85,6 +96,22 @@ $theme-color-3: #9026d0;
         animation: bounce 0.1s ease-in;
       }
     }
+  }
+
+  .show {
+    display: flex;
+    width: 80%;
+    padding: 1vh;
+    font-size: 1.7vh;
+    background-color: rgb(240, 175, 175);
+    color: rgb(151, 26, 26);
+    border-radius: 10px;
+    position: absolute;
+    top: 1.5vh;
+  }
+
+  .hide {
+    display: none;
   }
 }
 
