--- a/src/components/ListaAulas/style/style.css
+++ b/src/components/ListaAulas/style/style.css
@@ -3,11 +3,11 @@ div.aulas{
     color: black;
     padding: 20px;
     border: 5px solid gray;
-    border-radius: 20px;
-    flex-grow: 1;
-    /* margin-top: 120px; */
     height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
+    flex-grow: 1;
+    width: 10%;
 }
 nav {
 	margin:0 auto;
@@ -16,37 +16,30 @@ nav {
     display:inline-block;
     margin-bottom: 10px;
 }
-
 nav ul {
     margin:0;padding:0;
     list-style-type:none;
     display:inline-block;
 }
-
 nav ul li {
 	position:relative;
 	margin:0 20px 0 0;
     display:inline-block;
     background-color: white;
 }
-
 li > a:after { content: ' »'; }
-
 li > a:only-child:after { content: ''; }
-
 nav ul li a {
 	padding:20px;
     display:inline-block;
     text-decoration:none;
 }
-
 nav ul li a:hover {
     opacity:0.5;
     background-color: black;
     color: white;
     width: 100%;
 }
-
 nav ul li ul {
     display:none;
     position:absolute;
@@ -54,11 +47,9 @@ nav ul li ul {
     float:left;
     z-index: 20;
 }
-
 nav ul li ul li {
 	width:100%;
 }
-
 nav ul li:hover ul {
     display:block;
 }
@@ -67,15 +58,12 @@ div.aulas::-webkit-scrollbar-track{
     background-color: white;
 }
 div.aulas::-webkit-scrollbar{
-    width: 16px;
+    width: 6px;
 }
 div.aulas::-webkit-scrollbar-thumb{
-    border-radius: 20px;
+    /* border-radius: 20px; */
     background-color: gray;
 }
 div.aulas > nav > ul > li > a{
-    font-size: 1.5rem;
-}
-div.aulas > nav > ul > li > ul{
     font-size: 1.5rem;
 }
