--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -16,32 +16,38 @@ header {
   position: sticky;
   top: 0;
   z-index: 3;
-}
+  h1 {
+    display: flex;
+    align-self: center;
+    font-size: 3vh;
+  }
+  .left-side {
+    display: flex;
+    flex-grow: 2;
+    gap: 2vh;
+  }
 
-h1 {
-  display: flex;
-  align-self: center;
-  font-size: 3vh;
-}
-
-.left-side {
-  display: flex;
-  flex-grow: 2;
-  gap: 2vh;
-}
-
-.right-side {
-  display: flex;
-  text-align: end;
-  gap: 2vh;
-  img {
-    width: 5vh;
-    cursor: pointer;
-    &:hover {
-      transform: scale(1.1);
+  .right-side {
+    display: flex;
+    text-align: end;
+    gap: 2vh;
+    h1 {
+      font-size: 2.5vh;
     }
-    &:active {
-      animation: bounce 0.1s ease-in;
+    a {
+      align-self: center;
+    }
+
+    img {
+      justify-self: center;
+      width: 3.5vh;
+      cursor: pointer;
+      &:hover {
+        transform: scale(1.1);
+      }
+      &:active {
+        animation: bounce 0.1s ease-in;
+      }
     }
   }
 }
