feat: implementação de rotas protegidas baseadas na função do usuário

--- a/src/components/Accordion/style.scss
+++ b/src/components/Accordion/style.scss
@@ -55,7 +55,7 @@
   }
 
   a {
-    text-decoration: none;
+    text-decoration: none !important;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0.5vh;
     font-weight: 400;
