--- a/src/pages/Aula/style/style.css
+++ b/src/pages/Aula/style/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     width: auto;
     height: auto;
-    font-size: 1.1rem;
 }
 a{
     text-decoration: none;
@@ -20,8 +19,9 @@ article{
     display: flex;
     height: 85vh;
     background-image: url("../../../assets/background-light.png");
-    background-repeat: repeat-x;
-    background-position-y: center;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     align-content: flex-start;
     justify-content: center;
     column-gap: 3vw;
