--- a/src/pages/Aula/style/style.css
+++ b/src/pages/Aula/style/style.css
@@ -1,28 +1,29 @@
-*{
-    margin: 0;
-    padding: 0;
-    width: auto;
-    height: auto;
+/* * {
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: auto;
+  font-size: 1.1rem;
+} */
+a {
+  text-decoration: none;
+  color: black;
 }
-a{
-    text-decoration: none;
-    color: black;
+a:hover {
+  text-decoration: underline;
 }
-a:hover{
-    text-decoration:underline;
+header {
+  text-align: center;
+  padding: 20px;
 }
-header{
-    text-align: center;
-    padding: 20px;
-}
-article{
-    display: flex;
-    height: 85vh;
-    background-image: url("../../../assets/background-light.png");
-    background-repeat: repeat-x;
-    background-position-y: center;
-    align-content: flex-start;
-    justify-content: center;
-    column-gap: 3vw;
-    padding: 20px;
+article {
+  display: flex;
+  height: 85vh;
+  background-image: url("../../../assets/background-light.png");
+  background-repeat: repeat-x;
+  background-position-y: center;
+  align-content: flex-start;
+  justify-content: center;
+  column-gap: 3vw;
+  padding: 20px;
 }
