--- a/src/components/ConteudoAdmin/style/style.css
+++ b/src/components/ConteudoAdmin/style/style.css
@@ -1,6 +1,24 @@
 .conteudo-admin{
-    display: flex;
-    flex-grow: 4;
     height: 90vh;
-    background-color: lightcoral;
+}
+.app-container{
+    padding: 20px;
+    width: 100%;
+}
+.add{
+    margin-bottom: 10px;
+}
+.btn-add{
+    width: 200px;
+}
+button{
+    background-color: gray;
+    color: white;
+    padding: 10px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+input{
+    padding: 10px;
+    margin-bottom: 10px;
 }
