--- a/src/components/SidebarAdmin/style/style.css
+++ b/src/components/SidebarAdmin/style/style.css
@@ -1,38 +1,19 @@
-nav {
-    width : 20vw; 
-    height: 90vh;
-}
-span {
-    box-shadow: 0 3px 10px #d9d9d9;
-    padding : 30px;
-    background : white; 
-    color : black;
-    font-size : 1.2em;
-    cursor : pointer;
-    display: block;
-}
-span::after {
-    float: right;
-    right: 10%;
-    content: "+";
-}
-.slide {
-    margin-top: 10px;
-    clear:both;
-    width:100%;
-    height:0;
-    overflow: hidden;
-    text-align: center;
-    transition: height .4s ease;
-}
-
-ul.slide > li > a:hover{
-    border-bottom: 2px solid black;
-    background-color: white;
-    color: black;
+a{
     text-decoration: none;
 }
-
-#touch {position: absolute; opacity: 0; height: 0px;}    
-
-#touch:checked + .slide {height: 30vh;} 
+nav.side-bar {
+    width: 200px;
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+    box-shadow: 0 3px 10px #d9d9d9;
+    height: 100%;
+}
+ul.opcoes > li:hover{
+    width: 100%;
+}
+ul.opcoes > li > a:hover{
+    background-color: white;
+    color: black;
+    text-decoration: underline;
+}
