--- a/src/components/ConteudoAdmin/style/style.css
+++ b/src/components/ConteudoAdmin/style/style.css
@@ -1,6 +1,6 @@
 .conteudo-admin{
     position: absolute;
-    left: 300px;
+    left: 200px;
     width: auto;
 }
 .app-container{
@@ -12,24 +12,17 @@
 }
 .btn-add{
     width: 200px;
-}
-button{
-    background-color: gray;
-    color: white;
-    padding: 10px;
-    width: 100%;
-    margin-bottom: 10px;
-    cursor: pointer;
+    height: 39px;
 }
 input{
     padding: 10px;
     margin-bottom: 10px;
 }
 nav.side-bar {
-    width: 200px;
+    width: 180px;
     display: block;
     text-align: center;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     position: absolute;
 }
 ul.opcoes > li:hover{
