--- a/src/components/ReadOnlyRow/style/style.css
+++ b/src/components/ReadOnlyRow/style/style.css
@@ -1,3 +1,16 @@
+.linha{
+    border-bottom: 1px solid gray;
+    padding-bottom: 10px;
+}
+
+tr.linha > td{
+    padding: 10px;
+}
+
+.btn-action{
+    display: flex;
+}
+
 .button-editar{
     background-image: url("/src/assets/edit-button.svg");
     background-repeat: no-repeat;
@@ -7,6 +20,9 @@
     border: white;
     cursor: pointer;
 }
+.button-editar:hover{
+    filter: opacity(50%);
+}
 .button-deletar{
     background-image: url("/src/assets/delete-button.svg");
     background-repeat: no-repeat;
@@ -15,4 +31,8 @@
     background-color: white;
     border: white;
     cursor: pointer;
+    margin-top: 5px;
+}
+.button-deletar:hover{
+    filter: opacity(50%);
 }
