--- a/src/components/ListaAulas/style.css
+++ b/src/components/ListaAulas/style.css
@@ -31,6 +31,10 @@ nav ul li {
   background-color: #fff;
 }
 
+.aula-selecionada {
+  cursor: default;
+}
+
 .aula-selecionada:after {
   margin-left: 2vh;
   content: "▼";
@@ -38,7 +42,8 @@ nav ul li {
 }
 
 nav ul li a {
-  padding: 2vh;
+  padding: 1vh 2vh;
+  margin-bottom: 1vh;
   display: inline-block;
   text-decoration: none;
   color: #000;
@@ -46,7 +51,7 @@ nav ul li a {
 
 nav ul li a:hover {
   opacity: 0.5;
-  background-color: black;
+  background-color: gray;
   color: white;
   width: 100%;
 }
@@ -72,6 +77,6 @@ div.aulas::-webkit-scrollbar-thumb {
   background-color: gray;
 }
 div.aulas > nav > ul > li > a {
-  font-size: 3.5vh;
+  font-size: 3vh;
   font-weight: 700;
 }
