:dizzy: style: ajustado o layout da pág admin

--- a/src/components/ListaAulas/style.css
+++ b/src/components/ListaAulas/style.css
@@ -24,7 +24,7 @@
   text-underline-offset: 4px;
 }
 
-nav ul li {
+.aulas nav ul li {
   position: relative;
   display: inline-block;
   width: 30vh;
@@ -41,7 +41,7 @@ nav ul li {
   font-size: 2vh;
 }
 
-nav ul li a {
+.aulas nav ul li a {
   padding: 1vh 2vh;
   margin-bottom: 1vh;
   display: inline-block;
@@ -49,20 +49,20 @@ nav ul li a {
   color: #000;
 }
 
-nav ul li a:hover {
+.aulas nav ul li a:hover {
   opacity: 0.5;
   background-color: gray;
   color: white;
   width: 100%;
 }
-nav ul li ul {
+.aulas nav ul li ul {
   display: none;
   position: absolute;
   left: 0;
   z-index: 3;
 }
 
-nav ul li:hover ul {
+.aulas nav ul li:hover ul {
   display: block;
 }
 
