--- a/src/components/ConteudoAdmin/style.css
+++ b/src/components/ConteudoAdmin/style.css
@@ -28,7 +28,7 @@
 }
 
 .opcoes a:hover {
-  color: #ee41a8;
+  color: #0dbc9e;
 }
 
 .conteudo-admin {
@@ -55,6 +55,10 @@ thead.tabela-cabecalho > tr > th {
   padding: 1vh;
 }
 
+.tabela tbody {
+  word-break: break-word;
+}
+
 .add-options {
   display: flex;
   flex-direction: column;
@@ -65,6 +69,10 @@ thead.tabela-cabecalho > tr > th {
 
 .add-options h2 {
   font-size: 2.5vh;
+}
+
+.opcoes .selected-item {
+  color: #0dbc9e;
 }
 
 .conteudo-admin::-webkit-scrollbar {
@@ -79,4 +87,21 @@ thead.tabela-cabecalho > tr > th {
   background-color: #8b8b8b;
   border-radius: 8px;
   border: 3px solid #fff;
+}
+
+.go-home {
+  display: flex;
+  font-size: 2vh;
+  padding: 2vh;
+  text-decoration: none;
+  color: #ee41a8;
+  font-weight: 700;
+  position: absolute;
+  bottom: 5vh;
+  right: 5vh;
+}
+
+.go-home:hover {
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
